--- a/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
+++ b/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Substrings Finder</title>
+  <title>Tus Libros</title>
 
   <!-- Fonts to support Material Design -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
@@ -32,12 +32,10 @@
   <script type="text/babel" type="module">
     include('./src/MuiComponents.js')
     include('./src/MuiStyles.js')
-
     include('./src/fetch.js')
-
     include('./src/components/MyToolbar.js')
     include('./src/components/Login.js')
-    include('./src/components/SubstringsView.js')
+    include('./src/components/CatalogView.js')
     include('./src/components/SubstringDetailsView.js')
     include('./src/components/App.js')
 
