--- a/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
+++ b/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
@@ -38,6 +38,7 @@
     include('./src/components/CatalogView.js')
     include('./src/components/CartView.js')
     include('./src/components/App.js')
+    include('./src/components/BookList.js')
 
     ///////////////////////////////////////////////////////////////////////////
     // Initial render
