--- a/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
+++ b/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
@@ -39,6 +39,8 @@
     include('./src/components/CartView.js')
     include('./src/components/App.js')
     include('./src/components/BookList.js')
+    include('./src/components/TicketView.js')
+    include('./src/components/BigButton.js')
 
     ///////////////////////////////////////////////////////////////////////////
     // Initial render
