Detalles de libros e historial

--- a/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
+++ b/25-TusLibros/4/TusLibrosReactClient/templates/_index.html
@@ -40,6 +40,9 @@
     include('./src/components/App.js')
     include('./src/components/BookList.js')
     include('./src/components/TicketView.js')
+    include('./src/components/SuccesfulCheckoutView.js')
+    include('./src/components/HistoryView.js')
+    include('./src/components/BookDetailsView.js')
     include('./src/components/BigButton.js')
 
     ///////////////////////////////////////////////////////////////////////////
